2007-10-06  Ethan Merritt  <merritt@u.washington.edu>

	term/cairo.trm: Change all internal variable names from cairopdf_* to
	cairotrm_* since the code now supports multiple cairo-based terminals.
	Later we will introduce parallel variables cairopdf_*, cairopng_*, etc
	wherever there is a need to distinguish different terminals.

2007-10-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/cairo.trm src/wxterminal/gp_cairo.c (gp_cairo_solid_background 
	gp_cairo_clear_background) wxterminal/gp_cairo.h wxterminal/wxt_gui.cpp:
	Provide alternative routines to initialize the background to either
	solid white or transparent.

2007-10-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term):  Always accept the full name of a terminal,
	even if it is a leading substring of a longer name.  E.g. accept
	"set term pdf" even if there are both pdf and pdfcairo terminals.

	* term/cairo.trm configure.in:  Convert cairo.trm to be shared by
	more than one cairo-based terminal type.  Change the pdf terminal name
	from "cairopdf" to "pdfcairo".  Add a parallel terminal entry table for
	"pngcairo".  Test for output type (pdf or png) in term->init() and
	term->reset().  All other code is shared at this point.

2007-10-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Load first/second axis information into 
	the head of the label list for plot mode LABELPOINTS.
	Bug #1807015

2007-10-03  Ethan Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_options): Remove spurious c_token++, which caused
	parsing to skip the font size in:  set term cgm "fontname" fontsize

2007-10-02  Ethan Merritt  <merritt@u.washington.edu>

	* src/binary.c src/binary.h src/bf_test.c: Rename the routine vector()
	to alloc_vector().  This avoids a conflict with the "vector" keyword on
	PowerPC OSX with Altivec compiler options enabled.
	Bug #1754164

2007-10-01  Ethan Merritt  <merritt@u.washington.edu>
